--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <section class="chronology-section">
                 <h2 class="hr">Ключевые этапы</h2>
-                <h3 class="cl">Основные вехи конституционной истории</h3>
+                <h3 class="cl">Основные даты конституционной истории</h3>
         
             <div class="timeline">
                 <table class="timeline-table">
